--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 13,
+        "ecmaVersion": 2020,
         "sourceType": "module"
     },
     "plugins": [
@@ -22,6 +22,6 @@
         "prettier"
     ],
     "rules": {
-        "prettier/prettier": ["error"]
+        "prettier/prettier": ["warn"]
     }
 }
